# cross-rates

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  pyproject.toml  run-web.bat  run.bat
.github/workflows/: ci.yml
cross_rates/: __init__.py  __main__.py
cross_rates/feeds/: __init__.py  base.py  frankfurter.py  simulado.py
cross_rates/nucleo/: __init__.py  arbitragem.py  cotacao.py  cross.py  forward.py  grafo.py  hedging.py  opcoes.py  swaps.py
cross_rates/servico/: __init__.py  exemplos.py  formato.py  operacoes.py  serial.py
cross_rates/tui/: __init__.py  app.py  formato.py  pratica.py
cross_rates/web/: __init__.py  app.py
cross_rates/web/static/: app.css
cross_rates/web/templates/: index.html
cross_rates/web/templates/partials/: _arbitragem.html  _cross.html  _erro.html  _forward.html  _hedge.html  _opcao.html  _swap.html  _tabela.html
testes/: test_arbitragem.py  test_arestas.py  test_cross.py  test_daycount.py  test_feeds.py  test_forward.py  test_hedging.py  test_opcoes.py  test_pratica.py  test_servico.py  test_swaps.py  test_tui.py  test_web.py
