[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-rates"
version = "0.1.0"
description = "Calculadora de cross-rates (taxas cruzadas) com bid/ask, em terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["textual>=0.80"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cross-rates = "cross_rates.tui:main"

[tool.setuptools.packages.find]
include = ["cross_rates*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
