[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-rates"
version = "0.1.0"
description = "Terminal toolkit for FX cross-rates, CIP forwards and arbitrage with bid/ask microstructure."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["textual>=0.80"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio>=4",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cross-rates = "cross_rates.tui:main"

[tool.setuptools.packages.find]
include = ["cross_rates*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
# Textual's run_test() drives an asyncio event loop; "auto" lets the async
# test coroutines run without a per-test marker.
asyncio_mode = "auto"
addopts = "--cov=cross_rates --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F (pyflakes+pycodestyle), I (isort), UP (pyupgrade), B (bugbear).
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
# We hold the financial core to a strict bar. The Textual UI layer leans on a
# dynamically-typed widget API where strict checking is mostly noise, so it is
# intentionally outside the type-checked surface.
files = ["cross_rates/nucleo"]
