[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-rates"
version = "0.1.0"
description = "Terminal toolkit for FX cross-rates, CIP forwards and arbitrage with bid/ask microstructure."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["textual>=0.80"]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio>=4",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[project.scripts]
cross-rates = "cross_rates.tui:main"
cross-rates-web = "cross_rates.web:serve"

[tool.setuptools.packages.find]
include = ["cross_rates*"]

[tool.setuptools.package-data]
# Garante que os templates Jinja e os estáticos (CSS/htmx) seguem no wheel,
# não só no modo editável — caso contrário a web UI falha ao instalar.
"cross_rates.web" = ["templates/**/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
# Textual's run_test() drives an asyncio event loop; "auto" lets the async
# test coroutines run without a per-test marker.
asyncio_mode = "auto"
addopts = "--cov=cross_rates --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
# A TUI interativa (Textual) fica fora da medição de cobertura, tal como fica
# fora do mypy --strict (ver [tool.mypy] abaixo): é código de event-loop com
# I/O de terminal, integration-tested em test_tui.py/test_pratica.py, onde
# perseguir cobertura por linha rende pouco. O gate de 100% aplica-se ao núcleo
# financeiro, à camada de serviço, ao frontend web e aos entry-points.
omit = ["cross_rates/tui/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F (pyflakes+pycodestyle), I (isort), UP (pyupgrade), B (bugbear).
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI usa `= Form([])` para campos de formulário opcionais (lista de cotações);
# o default mutável é idiomático e não é mutado em runtime, por isso ignora-se B006.
"cross_rates/web/app.py" = ["B006"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
# We hold the financial core AND the framework-agnostic service layer to a
# strict bar. The UI layers (Textual TUI and the FastAPI/Jinja web frontend)
# lean on dynamically-typed framework APIs where strict checking is mostly
# noise, so they are intentionally outside the type-checked surface.
files = ["cross_rates/nucleo", "cross_rates/servico"]
